--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 	box-shadow: 0 -10px 0 brown, 0 5px 0 yellowgreen;
 	border-radius: 60px;
 	margin: 10px;
+	cursor:url(http://zeldawiki.org/images/4/4b/Hammer_FSA.png), auto;
+}
+.hole:active {
+ cursor:url(http://zeldawiki.org/images/5/54/FSA_-_Hammer.png),auto;
 
 }
 .row {
